spacing fix

--- a/styles/theme.css
+++ b/styles/theme.css
@@ -139,7 +139,7 @@ small {
 
 p {
     color: var(--text_med_emp);
-    margin: 0 0 1rem 0;
+    margin: 1rem 0 1rem 0;
     font-size: 1em;
     font-weight: 400;
     letter-spacing: 0.02em;
@@ -318,8 +318,9 @@ h3 {
     line-height: 1.5rem;
     letter-spacing: 0.02rem;
     font-weight: 600;
-    margin-bottom: 8px;
+    margin-bottom: -8px;
 }
+
 
 h4 {
     font-size: 1.125rem;
